# auto-invoice

./: .gitignore  .vercelignore  LICENSE  README.md  package.json  rollup.config.js  tsconfig.json  workspace.code-workspace
backend/: Cargo.toml
backend/migrations/2022-03-01-213904_users/: down.sql  up.sql
backend/src/: authz_state.rs  main.rs  routes.rs  user.rs
frontend/: package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.html  colors.scss  global.scss
frontend/src/lib/: api.ts  authz.ts  firebase.ts  stores.ts
frontend/src/lib/components/: Header.svelte
frontend/src/routes/: __layout.svelte  dashboard.svelte  index.svelte
frontend/src/routes/app/: __layout.svelte  dashboard.svelte  index.svelte
src/: server.ts  stores.ts  template.html
src/components/: Header.svelte  Invoice.svelte  InvoiceItems.svelte
src/routes/: _layout.svelte  index.svelte  invoice-creator.svelte  invoice.svelte
src/theme/: _smui-theme.scss
src/theme/dark/: _smui-theme.scss
static/: global.css
