[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "*"
log = "*"
dotenv = "*"
tokio = { version = "*", features = ["full", "rt"] }
actix-web = "*"
serde = { version = "*", features = ["derive"] }
futures-util = "*"
actix-cors = "*"
jsonwebtoken = { version = "8", features = ["use_pem"] }
reqwest = "*"
serde_json = "*"
pem = "*"