[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4.14"
dotenv = "0.15.0"
tokio = { version = "1.17.0", features = ["full", "rt"] }
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
futures-util = "0.3.21"
actix-cors = "0.6.0"
jsonwebtoken = { version = "8", features = ["use_pem"] }
reqwest = "0.11.9"
serde_json = "1.0.79"
diesel = { version = "1.4.4", features = ["sqlite"] }
chrono = "0.4.19"
